[workspace]
members = [
    "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = "0.6.20"
tower = "0.4.13"
tower-http = {version="0.4.4", features = ["cors", "trace"]}
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.104"
url = "2.4.0"
rand = "0.8.5"