[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
rand.workspace = true
cairo-vm = "0.9.2"
cairo-lang-compiler = "2.5.0"
cairo-lang-sierra = "2.4.0"
cairo-lang-sierra-type-size = "2.5.0"
cairo-lang-sierra-to-casm = "2.5.0"
cairo-lang-sierra-ap-change = "2.5.0"
cairo-lang-sierra-gas = "2.5.0"