[package]
name = "tracer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
cairo-vm.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-sierra-type-size.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra-ap-change.workspace = true
cairo-lang-sierra-gas.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-utils.workspace = true
thiserror.workspace = true
bincode.workspace = true
itertools.workspace = true
num-bigint = "0.4.4"
byteorder = "1.5.0"